header and footer ==> in progress

--- a/WildCircus/src/app/header/header.component.html
+++ b/WildCircus/src/app/header/header.component.html
@@ -1,59 +1,50 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" id="banner">
-	<div class="container">
-  <!-- Brand -->
-  <a class="navbar-brand" href="#"><span>Logo</span> Here</a>
+    <div class="container-fluid">
+        <!-- Brand -->
+        <a class="navbar-brand"><img src="https://www.stickpng.com/assets/images/5a5a87f714d8c4188e0b08d1.png"
+                alt="logo-cirque"></a>
 
-  <!-- Toggler/collapsibe Button -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <!-- Navbar links -->
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li> 
-	   <!-- Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Dropdown link
-      </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
-      </div>
-    </li>
-    </ul>
-  </div>
-	</div>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link">Le cirque</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Les artistes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Réserver</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
 <div class="banner">
-	<div class="container">
-	<div class="banner-text">
-	<div class="banner-heading">
-	Glad to see you here !
-	</div>
-	<div class="banner-sub-heading">
-	Here goes the secondary heading on hero banner
-	</div>
-	<button type="button" class="btn btn-warning text-dark btn-banner">Get started</button>
-	</div>
-	</div>
+    <div class="container">
+        <div class="banner-text">
+            <div class="banner-heading">
+                Bienvenue dans un monde merveilleux
+            </div>
+            <div class="banner-sub-heading">
+                Le frisson commence maintenant !
+            </div>
+        </div>
+    </div>
 </div>
 <section id="about">
-<div class="container">
-	<div class="text-intro">
-	<h2>About Us</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-	</div>
-</div>
+    <div class="container">
+        <div class="text-intro">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
+                harum ex magni, dicta impedit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
+                quam architecto quo inventore harum ex magni, dicta impedit.</p>
+        </div>
+    </div>
 </section>
