--- a/WildCircus/src/app/footer/footer.component.html
+++ b/WildCircus/src/app/footer/footer.component.html
@@ -1,45 +1,59 @@
 <footer class="section footer-classic context-dark bg-image" style="background: #2d3246;">
-        <div class="container">
-          <div class="row row-30">
-            <div class="col-md-4 col-xl-5">
-              <div class="pr-xl-4"><a class="brand" href="index.html"><img class="brand-logo-light" src="images/agency/logo-inverse-140x37.png" alt="" width="140" height="37" srcset="images/agency/logo-retina-inverse-280x74.png 2x"></a>
-                <p>We are an award-winning creative agency, dedicated to the best result in web design, promotion, business consulting, and marketing.</p>
-                <!-- Rights-->
-                <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p>
-              </div>
+    <div class="container-fluid">
+        <div class="row row-30">
+            <div class="col-md-3 col-xl-3">
+                <div class="pr-xl-4"><a class="brand">
+                        <img class="brand-logo"
+                            src="https://www.stickpng.com/assets/images/5a5a87f714d8c4188e0b08d1.png"
+                            alt="logo-cirque"></a>
+                    <p>We are an award-winning creative agency, dedicated to the best result in web design, promotion,
+                        business consulting, and marketing.</p>
+                    <!-- Rights-->
+                    <p class="rights"><span>©  </span><span class="copyright-year">2019</span><span> </span><span>Mike
+                            Coding</span><span>. </span><span>All
+                            Rights Reserved.</span></p>
+                </div>
             </div>
-            <div class="col-md-4">
-              <h5>Contacts</h5>
-              <dl class="contact-list">
-                <dt>Address:</dt>
-                <dd>798 South Park Avenue, Jaipur, Raj</dd>
-              </dl>
-              <dl class="contact-list">
-                <dt>email:</dt>
-                <dd><a href="mailto:#">dkstudioin@gmail.com</a></dd>
-              </dl>
-              <dl class="contact-list">
-                <dt>phones:</dt>
-                <dd><a href="tel:#">+91 7568543012</a> <span>or</span> <a href="tel:#">+91 9571195353</a>
-                </dd>
-              </dl>
+            <div class="col-md-6 col-xl-6">
+                <div class="container">
+                    <div class="row">
+                        <form>
+                            <fieldset>
+                                <input type="text" id="name" name="name" class="input-block-level" placeholder="Name">
+                                <input type="text" id="email" name="email" class="input-block-level"
+                                    placeholder="Email">
+                                <textarea rows="3" id="description" name="description" class="input-block-level"
+                                    placeholder="Description"></textarea>
+                                <button type="submit" class="btn btn-warning pull-right">Envoyer</button>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4 col-xl-3">
-              <h5>Links</h5>
-              <ul class="nav-list">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacts</a></li>
-                <li><a href="#">Pricing</a></li>
-              </ul>
+            <div class="col-md-3 col-xl-3">
+                <h5>Contact</h5>
+                <dl class="contact-list">
+                    <dt>Address:</dt>
+                    <dd>29 montée des Lisières, Genay, 69730, France</dd>
+                </dl>
+                <dl class="contact-list">
+                    <dt>email:</dt>
+                    <dd><a href="mailto:#">mickael.spennato@gmail.com</a></dd>
+                </dl>
+                <dl class="contact-list">
+                    <dt>téléphone:</dt>
+                    <dd><a href="tel:#">+33 673052475</a>
+                    </dd>
+                </dl>
             </div>
-          </div>
         </div>
-        <div class="row no-gutters social-container">
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
-          <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
-        </div>
-      </footer>
+    </div>
+    <div class="row no-gutters social-container">
+        <div class="col"><a class="social-inner" href="#"><span
+                    class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
+        <div class="col"><a class="social-inner" href="#"><span
+                    class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
+        <div class="col"><a class="social-inner" href="#"><span
+                    class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
+    </div>
+</footer>
