header and footer ==> in progress

--- a/WildCircus/src/app/footer/footer.component.html
+++ b/WildCircus/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="section footer-classic context-dark bg-image" style="background: #2d3246;">
+<footer class="section footer-classic context-dark bg-image navbar-fixed-bottom" style="background: #2d3246;">
     <div class="container-fluid">
         <div class="row row-30">
             <div class="col-md-3 col-xl-3">
@@ -14,23 +14,23 @@
                             Rights Reserved.</span></p>
                 </div>
             </div>
-            <div class="col-md-6 col-xl-6">
+            <div class="col-md-6 col-xl-6 d-flex align-items-center">
                 <div class="container">
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <form>
-                            <fieldset>
+                            <fieldset class="d-flex flex-column">
                                 <input type="text" id="name" name="name" class="input-block-level" placeholder="Name">
                                 <input type="text" id="email" name="email" class="input-block-level"
                                     placeholder="Email">
                                 <textarea rows="3" id="description" name="description" class="input-block-level"
-                                    placeholder="Description"></textarea>
+                                    placeholder="Votre message à notre attention"></textarea>
                                 <button type="submit" class="btn btn-warning pull-right">Envoyer</button>
                             </fieldset>
                         </form>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-xl-3">
+            <div class="col-md-3 col-xl-3 align-self-center">
                 <h5>Contact</h5>
                 <dl class="contact-list">
                     <dt>Address:</dt>
