header and footer ==> in progress + animation between component ok

--- a/WildCircus/src/app/header/header.component.html
+++ b/WildCircus/src/app/header/header.component.html
@@ -13,13 +13,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link">Le cirque</a>
+                    <a class="nav-link" [routerLink]="[ '/home' ]">Le cirque</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Les artistes</a>
+                    <a class="nav-link" [routerLink]="[ '/artists' ]">Les artistes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Réserver</a>
+                    <a class="nav-link" [routerLink]="[ '/reservation' ]">Réserver</a>
                 </li>
             </ul>
         </div>
@@ -38,13 +38,3 @@
         </div>
     </div>
 </div>
-<section id="about">
-    <div class="container">
-        <div class="text-intro">
-            <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
-                harum ex magni, dicta impedit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
-                quam architecto quo inventore harum ex magni, dicta impedit.</p>
-        </div>
-    </div>
-</section>
