--- a/WildCircus/src/app/footer/footer.component.html
+++ b/WildCircus/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="section footer-classic context-dark bg-image navbar-fixed-bottom" style="background: #2d3246;">
+<footer class="section footer-classic context-dark bg-image" style="background: #2d3246;">
     <div class="container-fluid">
         <div class="row row-30">
             <div class="col-md-3 col-xl-3">
