--- a/WildCircus/src/app/header/header.component.html
+++ b/WildCircus/src/app/header/header.component.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" [routerLink]="[ '/home' ]">Le cirque</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="[ '/artists' ]">Les artistes</a>
+                    <a class="nav-link" [routerLink]="[ '/artists' ]">Nos artistes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="[ '/reservation' ]">Réserver</a>
