--- a/WildCircus/src/app/header/header.component.scss
+++ b/WildCircus/src/app/header/header.component.scss
@@ -43,7 +43,7 @@ nav {
   -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
   transition: padding-top 0.3s, padding-bottom 0.3s;
   border: none;
-  background-color: rgba(45, 50, 70, 0.55);
+  background-color: rgb(45, 50, 70);
 }
 
 .shrink {
