--- a/WildCircus/src/app/artists/artists.component.scss
+++ b/WildCircus/src/app/artists/artists.component.scss
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Gothic+A1|Kaushan+Script|Libre+Baskerville|Lobster");
 
+
 h1 {
     font-family: 'Lobster'
+}
+
+.card.text-center {
+    box-shadow: 0px 10px 15px darkgray;
 }
