ajustement CSS + component réservation

--- a/WildCircus/src/app/header/header.component.html
+++ b/WildCircus/src/app/header/header.component.html
@@ -32,8 +32,11 @@
             <div class="banner-heading">
                 Bienvenue dans un monde merveilleux
             </div>
-            <div class="banner-sub-heading">
+            <div class="banner-sub-heading mt-5">
                 Le frisson commence maintenant !
+            </div>
+            <div>
+                <img src="https://www.stickpng.com/assets/images/5a5a87f714d8c4188e0b08d1.png" class="logo-banner" alt="">
             </div>
         </div>
     </div>
