--- a/WildCircus/src/app/reservation/reservation.component.html
+++ b/WildCircus/src/app/reservation/reservation.component.html
@@ -1,1 +1,27 @@
-<div>reservation works!</div>
+<h1 class="text-uppercase mt-5 text-center ">Réserver des artistes</h1>
+
+<div class="container my-5">
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Artistes</th>
+                <th scope="col">Votre nom</th>
+                <th scope="col">Votre email</th>
+                <th scope="col">Nombre de personne</th>
+                <th scope="col">Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of artistsData">
+                <td>{{item.name}} </td>
+                <td><input type="text"></td>
+                <td><input type="email" name="email" id="email"></td>
+                <td><input type="number" name="nb" id="nb"></td>
+                <td><input type="text" placeholder="Date" class="form-control" bsDatepicker
+                        [bsConfig]="{ isAnimated: true, containerClass: 'theme-red'  }"></td>
+                <td><button type="button" class="btn btn-danger">Réserver</button></td>
+
+            </tr>
+        </tbody>
+    </table>
+</div>
