--- a/WildCircus/src/app/reservation/reservation.component.scss
+++ b/WildCircus/src/app/reservation/reservation.component.scss
@@ -1,4 +1,6 @@
-div {
-    height: 800px;
-    background-color: gray
+@import url("https://fonts.googleapis.com/css?family=Gothic+A1|Kaushan+Script|Libre+Baskerville|Lobster");
+
+
+h1 {
+    font-family: 'Lobster'
 }
