--- a/WildCircus/src/app/artists/artists.component.html
+++ b/WildCircus/src/app/artists/artists.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-uppercase mt-5 text-center">Nos artistes</h1>
+<h1 class="text-uppercase text-center">Nos artistes</h1>
 
 <div class="container my-5">
     <div class="card-deck">
