--- a/WildCircus/src/app/homepage/homepage.component.html
+++ b/WildCircus/src/app/homepage/homepage.component.html
@@ -1,1 +1,15 @@
-<div>homepage works!</div>
+<div style="position: absolute; left: 50%;">
+    <div class="text-center" style="position: relative; left: -50%">
+        <h1 class="my-5">Le cirque</h1>
+        <p>Le cirque Pinder est un cirque traditionnel français fondé en 1854 au Royaume-Uni par les frères William et
+            George Pinder. À l’origine, il porte le nom de « cirque Britannia », du nom du navire dont les voiles ont
+            servi à réaliser le chapiteau. Il change plusieurs fois de propriétaire au cours de son histoire, et est
+            ainsi successivement dirigé par Charles Spiessert, Jean Richard et la famille Edelstein. La mascotte de ce
+            cirque est l’éléphant.
+            Installé en France depuis 1904, sa tournée commence toujours mi-janvier ou mi-février à Tours1 et se termine
+            à Paris entre la mi-novembre et la mi-janvier. </p>
+    </div>
+</div>
+<div class="video">
+    <video src="/assets/circus.mp4" muted onloadedmetadata="this.muted = true" autoplay loop></video>
+</div>
