--- a/WildCircus/src/app/homepage/homepage.component.scss
+++ b/WildCircus/src/app/homepage/homepage.component.scss
@@ -1,4 +1,14 @@
-div {
-    height: 800px;
-    background-color: gray
+video {
+    width: 100%;
+    opacity: 0.5;
+    filter: blur(3px);
+    position: relative;
+}
+
+@import url("https://fonts.googleapis.com/css?family=Gothic+A1|Kaushan+Script|Libre+Baskerville|Lobster");
+
+
+h1 {
+    font-family: 'Lobster';
+    z-index: 10;
 }
