--- a/WildCircus/src/app/reservation/reservation.component.html
+++ b/WildCircus/src/app/reservation/reservation.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-uppercase mt-5 text-center ">Réserver des artistes</h1>
+<h1 class="text-uppercase text-center ">Réserver des artistes</h1>
 
 <div class="container my-5">
     <table class="table">
