--- a/WildCircus/src/app/homepage/homepage.component.scss
+++ b/WildCircus/src/app/homepage/homepage.component.scss
@@ -1,14 +1,22 @@
 video {
-    width: 100%;
-    opacity: 0.5;
-    filter: blur(3px);
-    position: relative;
+  width: 100%;
+  opacity: 0.5;
+  filter: blur(3px);
+  position: relative;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Gothic+A1|Kaushan+Script|Libre+Baskerville|Lobster");
 
-
 h1 {
-    font-family: 'Lobster';
-    z-index: 10;
+  font-family: "Lobster";
+  z-index: 10;
+}
+
+p {
+  line-height: 2em;
+  border: 1px solid;
+  box-shadow: 0px 0px 25px gray;
+  padding: 3em;
+  background-color: #fff;
+  color: black;
 }
