--- a/WildCircus/src/app/adminpage/adminpage.component.html
+++ b/WildCircus/src/app/adminpage/adminpage.component.html
@@ -13,12 +13,12 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of reservationData">
-                <td>{{item.date}}</td>
+                <td>{{item.date | date}}</td>
                 <td>{{item.artistes}} </td>
                 <td>{{item.nom}} </td>
                 <td>{{item.email}}</td>
                 <td>{{item.nombre}}</td>
-                <td><button type="button" (click)="remove()" class="btn btn-danger">Annuler</button></td>
+                <td><button type="button" (click)="remove(item.id)" class="btn btn-danger">Annuler</button></td>
             </tr>
         </tbody>
     </table>
