--- a/WildCircus/src/app/adminpage/adminpage.component.html
+++ b/WildCircus/src/app/adminpage/adminpage.component.html
@@ -28,7 +28,7 @@
 
 <h1 class="text-uppercase text-center my-5">Ajouter un artiste</h1>
 
-<div class="formulaire">
+<div class="formulaire d-flex justify-content-center">
     <form [formGroup]="artistForm" (ngSubmit)="addArtist()" class="my-5">
         <div class="form-group">
             <label for="name">Nom de l'artiste</label>
