--- a/WildCircus/src/app/reservation/reservation.component.html
+++ b/WildCircus/src/app/reservation/reservation.component.html
@@ -15,11 +15,11 @@
             <tr *ngFor="let item of artistsData">
                 <td>{{item.nom}} </td>
                 <td><input type="text" name="client" id="client"></td>
-                <td><input type="email"  name="email" id="email"></td>
+                <td><input type="email" name="email" id="email"></td>
                 <td><input type="number" name="nb" id="nb"></td>
-                <td><input type="text"  name="date" id="date" placeholder="Date" class="form-control" bsDatepicker
+                <td><input type="text" name="date" id="date" placeholder="Date" class="form-control" bsDatepicker
                         [bsConfig]="{ isAnimated: true, containerClass: 'theme-red'}"></td>
-                <td><button type="button" (click)="bookArtist()" class="btn btn-danger">Réserver</button></td>
+                <td><button type="button" class="btn btn-danger">Réserver</button></td>
             </tr>
         </tbody>
     </table>
